<resources>
    <string name="app_name">Shayari and Quotes </string>

    <string name="nav_header">Find all your quotes here</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="settings">Settings</string>
    <string name="title_activity_image_details">ImageDetails</string>

   <!-- <string name="facebook_app_id">446134340521471</string>
    <string name="fb_login_protocol_scheme">fb446134340521471</string>
-->
    <string name="facebook_app_id">4684674478253721</string>
    <string name="fb_login_protocol_scheme">fb4684674478253721</string>

    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>

    <string name="privacy_policy_url">http://example.com</string>

    <string name="play_more_apps">https://play.google.com/store/apps/dev?id=5326582216401202918</string>

    <string name="isRTL">false</string>

    <string name="version">Version</string>
    <string name="company">Company</string>
    <string name="website">Website</string>
    <string name="contact">Contact</string>
    <string name="description">Description</string>
    <string name="email">Email</string>
    <string name="err_internet_not_conn">Internet not connected</string>
    <string name="loading">Loading..</string>
    <string name="no_data_found">No Data Found</string>
    <string name="latest_photo_quotes">Latest Photo Quotes</string>
    <string name="latest_text_quotes">Latest Text Quotes</string>
    <string name="net_not_conn_click_connect">Internet is not connected, click on Connect if internet is On</string>
    <string name="net_error">Network Error</string>
    <string name="connect">Connect</string>
    <string name="error">Exit</string>
    <string name="error_occured_check_net">Error occurred, check internet connection</string>
    <string name="latest">Latest</string>
    <string name="no_more_data">No more data</string>
    <string name="unliked">Unliked</string>
    <string name="liked">Liked</string>
    <string name="topliked">Top Liked</string>
    <string name="password">Password</string>
    <string name="sign_in">Sing In</string>
    <string name="forgot_pass">Forgot Your Password?</string>
    <string name="login">Login</string>
    <string name="skip">Skip</string>
    <string name="dnt_have_acc">Dont have an account?</string>
    <string name="signup">SingUp</string>
    <string name="fullname">Full Name</string>
    <string name="cpassword">Confirm Password</string>
    <string name="phone">Phone</string>
    <string name="register">Register</string>
    <string name="already_acc">Already have an account?</string>
    <string name="enter_name">Please Enter Name</string>
    <string name="enter_email">Please Enter Email</string>
    <string name="error_invalid_email">Invalid Email</string>
    <string name="enter_password">Please Enter Password</string>
    <string name="enter_cpassword">Please Enter Confirm Password</string>
    <string name="pass_nomatch">Confirm Password not matched</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="email_already_regis">Email Already Registered</string>
    <string name="logout_success">Logout Successful</string>
    <string name="register_success">Register Successful</string>
    <string name="enter_valid_email">Enter a valid e-mail address and we will send you a new password</string>
    <string name="submit">Submit</string>
    <string name="email_empty">Email cannot be empty</string>
    <string name="email_newpass">New Password has been mailed</string>
    <string name="email_notfound">Email not Registered</string>
    <string name="error_password_sort">This password is too short</string>
    <string name="cannot_empty">Field cannot be empty</string>
    <string name="login_success">Login Successful</string>
    <string name="login_not_success">Login not successful</string>
    <string name="email_pass_nomatch">Email and password not matched</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="categories">Categories</string>
    <string name="my_collection">My Collection</string>
    <string name="communicate">Communicate</string>
    <string name="rateapp">Rate App</string>
    <string name="shareapp">Share App</string>
    <string name="aboutus">About Us</string>
    <string name="logout">Logout</string>
    <string name="press_2_exit">Press again to exit</string>
    <string name="user">User</string>
    <string name="profile">Profile</string>
    <string name="no_item_mycoll">No Items in your collections</string>
    <string name="share">Share</string>
    <string name="what_u_share">What do you want to share</string>
    <string name="image">Image</string>
    <string name="share_via">Share Via</string>
    <string name="quotes">Quotes</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="name">Name</string>
    <string name="not_log">Not Logged In</string>
    <string name="edit">Edit</string>
    <string name="no_user_found">No user found</string>
    <string name="update">Update</string>
    <string name="profile_edit">Profile Edit</string>
    <string name="update_prof_succ">Profile Updated Successfully</string>
    <string name="update_prof_not_succ">Profile not updated</string>
    <string name="upload">Upload</string>
    <string name="select_image">Select Image</string>
    <string name="browse">Browse</string>
    <string name="select_wallpaper">Select Image</string>
    <string name="source_file_not_found">Source File Does not exist</string>
    <string name="upload_image">Uploading Image</string>
    <string name="wall_upload_success">Wallpaper uploaded successfully</string>
    <string name="error_uploading">Error uploading</string>
    <string name="text">Text</string>
    <string name="cannot_use_feature">Cannot use save feature without requested permission</string>
    <string name="image_saved_to">Image saved to:</string>
    <string name="sure_delete">Are you sure you want to delete?</string>
    <string name="image_deleted">Image Deleted</string>
    <string name="error_delete">Error Deleting</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="please_wait">Please wait..</string>
    <string name="quote">Quote</string>
    <string name="please_enter_quote">Please Enter Quote</string>
    <string name="quote_upload_success">Quote Uploaded Successfully</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="more_app">More App</string>
    <string name="pass_end_space">Please do not add space at end</string>
    <string name="exit">Exit</string>
    <string name="sure_exit">Are you sure you want to exit app?</string>
    <string name="about">About</string>
    <string name="menu_about">About Us</string>
    <string name="welcomeback">Welcome Back</string>
    <string name="signin_to_continue">Sign In to continue</string>
    <string name="remember_me">Remember Me</string>
    <string name="registering">Registering..</string>
    <string name="forgot_password_message">Enter your valid email address below and we will send you email with instructions on how to change your password</string>
    <string name="send">Send</string>
    <string name="your_ad_consent">Your Ad Consent</string>
    <string name="show_personalized_ad">Show Personalized Ads</string>
    <string name="enable_push_noti">Enable Push Notification</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="clearing_cache">Clearing Cache..</string>
    <string name="cache_cleared">Cache Cleared</string>
    <string name="fonts">Fonts</string>
    <string name="background">Background</string>
    <string name="quotes_maker">Quotes Maker</string>
    <string name="favourites">Favourites</string>
    <string name="more">More</string>
    <string name="latest_quotes">Latest Quotes</string>
    <string name="err_no_quotes_found">No Quotes Found</string>
    <string name="popular_quotes">Popular Quotes</string>
    <string name="refresh">Refresh</string>
    <string name="reload">Reload</string>
    <string name="err_server">Error connecting server</string>
    <string name="err_no_cat_found">No Categories Found</string>
    <string name="set_as_wallpaper">Set As Wallpaper</string>
    <string name="save">Save</string>
    <string name="downloading">Downloading..</string>
    <string name="quote_already_saved">Quote Already Saved</string>
    <string name="quote_saved">Quote Saved</string>
    <string name="get_more_wall">Get more amazing quotes, download now</string>
    <string name="share_quote">Share Quote</string>
    <string name="please_try_again">Please try again</string>
    <string name="wallpaper_set">Wallpaper Set</string>
    <string name="err_set_wall">Error setting wallpaper, please try again</string>
    <string name="home_screen">Home Screen</string>
    <string name="lock_screen">Lock Screen</string>
    <string name="home_lock_screen">Home Screen and Lock Screen</string>
    <string name="fav_removed">Removed from favourite</string>
    <string name="fav_added">Added to favourite</string>
    <string name="popular">Popular</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="select_quotes_type">Select Quotes Type</string>
    <string name="select">Select</string>
    <string name="write_quote_here">Write Your Quote Here</string>
    <string name="add">Add</string>
    <string name="err_quote_cannot_empty">Quote cannot be empty</string>
    <string name="my_quotes">My Quotes</string>
    <string name="saving">Saving..</string>
    <string name="err_saving_quote">Error while saving quote</string>
    <string name="saved">Saved</string>
    <string name="add_background">Add\nBackground</string>
    <string name="featured">Featured</string>
    <string name="upload_success_message">Your quote is uploaded successfully, it will appear in app once admin approves it.</string>
    <string name="upload_success">Upload Successful</string>
    <string name="ok">OK</string>
    <string name="try_again">Try Again</string>
    <string name="error_unauth_access">Unauthorized Access</string>
    <string name="error_unauth_api">Your App has Unauthorized access to APIs</string>
    <string name="err_connect_net_try">Please connect to internet and try again</string>
    <string name="report_message">Enter your report here</string>
    <string name="report_quote_">Report Quote:-</string>
    <string name="enter_report">Enter your report message</string>
    <string name="report">Report</string>
    <string name="quote_of_day">Quote of the day</string>
    <string name="tags">Tags</string>
    <string name="approved">Approved</string>
    <string name="login_google">Login with Google</string>
    <string name="login_fb">Login with Facebook</string>
    <string name="invalid_user">Invalid User</string>
    <string name="err_login_goole">Error while login with google</string>
    <string name="theme">Theme</string>
    <string name="system_default">System Default</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>

</resources>
