<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_category"
            android:icon="@mipmap/ic_category"
            android:title="@string/categories" />
        <item
            android:id="@+id/nav_latest"
            android:icon="@mipmap/latest"
            android:title="@string/latest" />

        <item
            android:id="@+id/nav_topLiked"
            android:icon="@mipmap/top_liked"
            android:title="@string/topliked" />

        <item
            android:id="@+id/nav_fav"
            android:icon="@mipmap/fav"
            android:title="@string/favourites" />

        <item
            android:id="@+id/nav_myCollection"
            android:icon="@mipmap/ic_my_collection"
            android:title="@string/my_collection" />

    </group>

    <item
        android:id="@+id/nav_uploads"
        android:icon="@mipmap/upload"
        android:title="@string/upload" />

    <item
        android:id="@+id/nav_quotemaker"
        android:icon="@mipmap/ic_quote_maker"
        android:title="@string/quotes_maker" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@mipmap/profile"
        android:title="@string/profile" />

    <item
        android:id="@+id/nav_login"
        android:icon="@mipmap/login"
        android:title="@string/login" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@mipmap/setting"
        android:title="@string/settings" />

</menu>