<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="158dp"
    android:gravity="bottom"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bg_nav_header"
        android:scaleType="centerCrop"
        android:contentDescription="@string/image"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="15dp">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/iv_nav"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/api"
        app:riv_border_color="@color/white50"
        app:riv_border_width="3dp"
        app:riv_corner_radius="5dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp">

        <TextView
            android:id="@+id/tt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:background="@android:color/transparent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/whiteAA"
            android:text="@string/nav_header"
            android:background="@android:color/transparent"/>

    </LinearLayout>

    </LinearLayout>

</RelativeLayout>
