<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bg"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="@font/font_semi_bold"
            android:text="@string/category"
            android:textColor="@color/text_heading"
            android:textSize="16sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/yourcardid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:elevation="3dp"
            app:cardCornerRadius="5dp"
            app:cardUseCompatPadding="true">

            <Spinner
                android:id="@+id/spinner_upload_wallcat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:spinnerMode="dropdown"
                android:fontFamily="@font/font_reg"
                android:popupBackground="@color/bg" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="@font/font_semi_bold"
            android:text="@string/tags"
            android:textColor="@color/text_heading"
            android:textSize="16sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:elevation="3dp"
            app:cardCornerRadius="5dp"
            app:cardUseCompatPadding="true">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_upload_tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:hint="@string/tags"
                android:fontFamily="@font/font_light"
                android:background="@android:color/transparent"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:elevation="3dp"
            android:shape="rectangle"
            app:cardCornerRadius="5dp"
            app:cardUseCompatPadding="true"
            app:cardBackgroundColor="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_round_white30"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_round_top_corner"
                    android:fontFamily="@font/font_semi_bold"
                    android:gravity="center"
                    android:padding="12dp"
                    android:text="@string/quote"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_upload_wall_browse"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:background="@drawable/bg_round_grey"
                    android:text="@string/browse"
                    android:textColor="@color/white"
                    android:fontFamily="@font/font_light"
                    android:paddingRight="40dp"
                    android:paddingLeft="40dp"
                    android:layout_marginTop="20dp"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:elevation="3dp"
                    android:shape="rectangle"
                    app:cardCornerRadius="5dp"
                    android:layout_margin="20dp"
                    app:cardUseCompatPadding="true">

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:id="@+id/iv_upload_wall_submit"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/image"
                        app:riv_corner_radius="5dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/placeholder_upload"/>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_upload_wall_submit"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:fontFamily="@font/font_reg"
            android:background="@drawable/bg_grt_round"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

</ScrollView>