<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg">

    <com.royal.attitude.status.royal.attitude.status.royal.utils.StatusBarView
        android:id="@+id/statusBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_grt_status_bar"/>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_forgostpass"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/bg_grt_toolbar"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:layout_below="@+id/statusBar"/>

    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_black"
        android:textSize="22sp"
        android:text="@string/forgot_pass"
        android:layout_marginTop="50dp"
        android:layout_centerInParent="true"
        android:fontFamily="@font/font_semi_bold"
        android:layout_below="@+id/toolbar_forgostpass"/>

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="@color/text_dark"
        android:text="@string/forgot_password_message"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/tv"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:fontFamily="@font/font_light"/>

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/tv1"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp">

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginBottom="7dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:src="@mipmap/email_black"
                android:contentDescription="@string/image"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black90_night"
                android:theme="@style/TextLabel_Grey"
                app:backgroundTint="@color/black90">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_forgot_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:textColor="@color/text_black"
                    android:textSize="16sp"
                    android:fontFamily="@font/font_reg" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll1"
            android:gravity="bottom"
            android:orientation="horizontal">

            <View
                android:layout_width="1dp"
                android:layout_height="5dp"
                android:background="@color/black90_night" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/black90_night" />

            <View
                android:layout_width="1dp"
                android:layout_height="5dp"
                android:background="@color/black90_night" />

        </LinearLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/button_forgot_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:textColor="@color/white"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:layout_marginTop="40dp"
        android:layout_centerInParent="true"
        android:layout_below="@+id/rl"
        android:fontFamily="@font/font_reg"
        android:background="@drawable/bg_corner_g1"/>

</RelativeLayout>