<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_grt_tb_top_corner"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="12dp"
            android:text="@string/select_quotes_type"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/iv_rate_close"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:padding="6dp"
            android:src="@mipmap/close"
            android:contentDescription="@string/image" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bottom_corner_white"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/rg_wall_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rb_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/image"
                android:textSize="16sp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/text_black"
                app:buttonTint="@color/primary"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/line_grey_hori" />

            <RadioButton
                android:id="@+id/rb_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text"
                android:textSize="16sp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/text_black"
                app:buttonTint="@color/primary"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/line_grey_hori" />

        </RadioGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_select_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/select"
            android:textColor="@color/white"
            app:backgroundTint="@color/colorPrimary" />

    </LinearLayout>

</LinearLayout>